Implementação da Repository

--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "DataBaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DataBaseName": "ProductDb",
+    "CollectionName": "Product"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
