Criação do projeto Basket.API - inclusão de pacotes nuget - criação das entidades - criação da repositorio - configuração do Redis Cache

--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -1,8 +1,6 @@
 {
-  "DataBaseSettings": {
-    "ConnectionString": "mongodb://catalogdb:27017",
-    "DataBaseName": "ProductDb",
-    "CollectionName": "Product"
+  "CacheSettings": {
+    "ConnectionString": "localhost:6379"
   },
 
   "Logging": {
@@ -11,5 +9,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
