--- a/src/Services/Basket/Basket.API/appsettings.Development.json
+++ b/src/Services/Basket/Basket.API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "CacheSettings": {
+    "ConnectionString": "basketdb:6379"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
