Adicionando Entidades, repositorios, extensões e conexão com postgres SQL - renomeação de GRPC => Grpc

--- a/src/Services/Discount/Discount.Grpc/Properties/launchSettings.json
+++ b/src/Services/Discount/Discount.Grpc/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "Discount.GRPC": {
+    "Discount.Grpc": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": false,
