--- a/src/Services/Basket/Basket.API/appsettings.Development.json
+++ b/src/Services/Basket/Basket.API/appsettings.Development.json
@@ -1,8 +1,7 @@
 {
   "CacheSettings": {
-    "ConnectionString": "basketdb:6379"
+    "ConnectionString": "localhost:6379"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
