--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -26,6 +26,15 @@ services:
         - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+
+  orderdb:
+    container_name: orderdb
+    environment:
+      ACCEPT_EULA: "Y"
+      SA_PASSWORD: "admin1234"
+    restart: always
+    ports:
+        - "1433:1433"
   
   pgadmin:
     container_name: pgadmin
