configurando Consumidor EventBus no Ordering.API

--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -5,7 +5,10 @@
   "EmailSettings": {
     "FromAddress": "anderson.masiero@gmail.com",
     "ApiKey": "",
-    "FromName" :  "Anderson"
+    "FromName": "Anderson"
+  },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
   },
   "Logging": {
     "LogLevel": {
