--- a/src/Services/Ordering/Ordering.API/Ordering.API.csproj
+++ b/src/Services/Ordering/Ordering.API/Ordering.API.csproj
@@ -17,6 +17,8 @@
 		<PackageReference Include="MassTransit" Version="7.1.6" />
 		<PackageReference Include="MassTransit.AspNetCore" Version="7.1.6" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="7.1.6" />
+		<PackageReference Include="AutoMapper" Version="11.0.1" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
