--- a/src/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "DataBaseSettings": {
-    "ConnectionString": "mongodb://catalogdb:27017",
+    "ConnectionString": "mongodb://localhost:27017",
     "DataBaseName": "ProductDb",
     "CollectionName": "Product"
   },
