--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "DataBaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DataBaseName": "ProductDb",
+    "DataBaseName": "CatalogDb",
     "CollectionName": "Product"
   },
 
